--- a/src/components/HackathonOverview.css
+++ b/src/components/HackathonOverview.css
@@ -1,91 +1,53 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
-#overviewSection {
+#hackathon-overview-section {
     background: #151515;
+    padding: 0 0 50px 0;
+    position: relative;
+}
+
+.counters {
+    font-size: 28px;
+}
+
+
+
+.overview-box {
+    background: black;
+    text-align: center;
+    padding: 60px 50px;
+    margin-top: -60px;
+    height: 580px;
+    box-shadow: 10px 10px 25px #4A2FBD;
+    border: 2px solid;
+    border-image-source: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    border-image-slice: 1;
+}
+
+.overview-box p {
+    font-size: 35px;
+}
+
+.hackathon-stroke {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.counters-div iframe {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 
 }
 
-.text--line {
-    font-size: 0.5em;
-}
-
-svg {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.text-copy {
-    fill: none;
-    stroke: white;
-    stroke-dasharray: 7% 28%;
-    stroke-width: 3px;
-    -webkit-animation: stroke-offset 9s infinite linear;
-    animation: stroke-offset 9s infinite linear;
-}
-
-.text-copy:nth-child(1) {
-    stroke: #360745;
-    stroke-dashoffset: 7%;
-}
-
-.text-copy:nth-child(2) {
-    stroke: #d61c59;
-    stroke-dashoffset: 14%;
-}
-
-.text-copy:nth-child(3) {
-    stroke: #e7d84b;
-    stroke-dashoffset: 21%;
-}
-
-.text-copy:nth-child(4) {
-    stroke: #efeac5;
-    stroke-dashoffset: 28%;
-}
-
-.text-copy:nth-child(5) {
-    stroke: #1b8798;
-    stroke-dashoffset: 35%;
-}
-
-@-webkit-keyframes stroke-offset {
-    50% {
-        stroke-dashoffset: 35%;
-        stroke-dasharray: 0 87.5%;
-    }
-}
-
-@keyframes stroke-offset {
-    50% {
-        stroke-dashoffset: 35%;
-        stroke-dasharray: 0 87.5%;
-    }
-}
-
-.futuristic g rect {
-    animation: startlight-effect 2s linear infinite;
-}
-
-.spiral g circle {
-    animation: spiral-effect 2s linear infinite;
-}
-
-@keyframes spiral-effect {
-    from {
-        stroke-width: 0;
-        stroke-dasharray: 0;
+@media only screen and (max-width: 600px) {
+    .overview-box p {
+        font-size: 15px
     }
 
-    to {}
-}
-
-@keyframes startlight-effect {
-    from {
-        width: 0%;
-    }
-
-    to {
-        width: 100%;
+    .overview-box {
+        height: inherit;
     }
 }
