--- a/src/components/Schedule.module.css
+++ b/src/components/Schedule.module.css
@@ -14,3 +14,11 @@
     border-image-slice: 1;
     font-size: 1.5rem;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .schedule {
+        height: inherit;
+
+    }
+}
