--- a/src/components/Schedule.module.css
+++ b/src/components/Schedule.module.css
@@ -15,6 +15,39 @@
     font-size: 1.5rem;
 }
 
+.pathSelectors button {
+    color: white;
+
+}
+
+.pathButton1 {
+    border: 2px solid;
+    border-image-source: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    border-image-slice: 1;
+    font-size: 1.5rem;
+    border-left: none;
+
+}
+
+.pathButton2 {
+    border: 2px solid;
+    border-image-source: linear-gradient(90.21deg, #4A2FBD -5.91%, #AA367C 111.58%);
+    border-image-slice: 1;
+    font-size: 1.5rem;
+    border-right: none;
+
+}
+
+.pathButton1:hover {
+    background-image: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.pathButton2:hover {
+    background-image: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
 @media only screen and (max-width: 600px) {
 
     .schedule {
