--- a/src/components/HackathonOverview.css
+++ b/src/components/HackathonOverview.css
@@ -43,8 +43,16 @@
 }
 
 @media only screen and (max-width: 600px) {
+    .schedule {
+        height: inherit;
+    }
+
     .overview-box p {
-        font-size: 15px
+        font-size: 25px
+    }
+
+    .counters {
+        font-size: 25px;
     }
 
     .overview-box {
