--- a/src/components/Banner.module.css
+++ b/src/components/Banner.module.css
@@ -30,3 +30,9 @@
         border-color: orange;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    #countDown {
+        font-size: 1.7rem;
+    }
+}
