--- a/src/components/Schedule.module.css
+++ b/src/components/Schedule.module.css
@@ -1,54 +1,59 @@
-.cardGrid {
+#schedule {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.dayCard {
-    margin-top: 20px;
-    border-radius: 50px;
-    background: #121212;
-    box-shadow: 10px 10px 25px #000000;
-    padding: 2rem;
-    /* border: 2px solid;
-    border-image-source: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-    border-image-slice: 1; */
-    font-size: 1.5rem;
+    margin: 20px 0 20px 0;
 }
 
 .pathSelectors button {
-    color: white;
 
+    font-weight: 700;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 10px 24px;
+    font-size: 18px;
+    margin-left: 18px;
+    position: relative;
+    background-color: transparent;
+    transition: 0.3s ease-in-out;
 }
 
-.pathButton1 {
-    font-size: 1.5rem;
-    border-left: none;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
+.pathSelectors button span {
+    z-index: 1;
 }
 
-.pathButton2 {
-    font-size: 1.5rem;
-    border-right: none;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
+.pathSelectors button::before {
+    content: "";
+    width: 0%;
+    height: 100%;
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: 0.3s ease-in-out;
 }
 
-.pathButton1:hover {
-    background-image: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+.pathSelectors button:hover {
+    color: #121212;
 }
 
-.pathButton2:hover {
-    background-image: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+.pathSelectors button:hover::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
+
+
 
 .keyDatesCards {
     border-radius: 10px;
     background: #121212;
     box-shadow: 10px 10px 25px #000000;
+    display: block;
+    width: 560px;
+    height: 230px;
 }
 
 @media only screen and (max-width: 600px) {
