added key event date cards

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,42 +1,1 @@
-.contact-card {
-    border-radius: 10px;
-    background: #121212;
-    box-shadow: 10px 10px 25px #000000;
-    padding: 20px;
-}
-
-.contact-card img {
-    border-radius: 100%;
-    margin-bottom: 5px;
-}
-
-.contact-card:nth-child(1) {
-    margin-right: 40px;
-}
-
-.contact-card:nth-child(2) {
-    margin-left: 40px;
-}
-
-.ho-email {
-    background: #121212;
-    border-radius: 8px;
-    box-shadow: 10px 10px 25px #000000;
-    font-size: 20px;
-    padding: 20px;
-}
-
-@media only screen and (max-width: 600px) {
-    .ho-email {
-        font-size: 12px;
-    }
-
-    .contact-card:nth-child(1) {
-        margin-right: 0px;
-        margin-bottom: 20px;
-    }
-
-    .contact-card:nth-child(2) {
-        margin-left: 0px;
-    }
-}
+@media only screen and (max-width: 600px) {}
