--- a/src/components/Banner.module.css
+++ b/src/components/Banner.module.css
@@ -6,6 +6,46 @@
         blink-caret .75s step-end infinite;
 }
 
+.registerButton button {
+
+    font-weight: 700;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 10px 24px;
+    font-size: 18px;
+    margin-left: 18px;
+    position: relative;
+    background-color: transparent;
+    transition: 0.3s ease-in-out;
+}
+
+.registerButton button span {
+    z-index: 1;
+}
+
+.registerButton button::before {
+    content: "";
+    width: 0%;
+    height: 100%;
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: 0.3s ease-in-out;
+}
+
+.registerButton button:hover {
+    color: #121212;
+}
+
+.registerButton button:hover::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
 
 /* The typing effect */
 @keyframes typing {
