--- a/src/App.css
+++ b/src/App.css
@@ -309,6 +309,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
+  background-image: linear-gradient(to bottom, #0a449b, #223675, #242951, #1e1d30, #121212);
   /* background-image: url('./assets/img/banner-bg.png');
   background-position: top center;
   background-size: cover;
