--- a/src/components/CollegeClub/CollegeClub.css
+++ b/src/components/CollegeClub/CollegeClub.css
@@ -15,6 +15,11 @@
 
 .Description {
   border: 4px solid #fff;
+  width: 100%;
+}
+
+.carousel-indicators {
+  display: none;
 }
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
@@ -26,11 +31,12 @@
 }
 .carousel-control-next-icon:hover,
 .carousel-control-prev-icon:hover {
-  background-color: #92239D;
+  background-color: #92239d;
   border-radius: 4px;
 }
 
-.carousel-control-next, .carousel-control-prev{
+.carousel-control-next,
+.carousel-control-prev {
   width: 5%;
   /* color: rgb(248, 0, 0);
   background: #5767fe;
