solved the icon problem and completed the app feature section

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,9 +1,14 @@
+.banner {
+  background-image: linear-gradient(180deg, #aa367c 0%, #121212 100%);
+}
+
 .bannerWrap {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
+
 .welcometoText {
   font-size: 4rem;
   font-family: "Helvetica";
@@ -15,7 +20,7 @@
   }
 }
 
-svg {
+#title-animation {
   font-family: "Helvetica Bold";
   /* position: absolute; */
   /* width: 70%; */
@@ -27,7 +32,8 @@ svg {
   background-color: white;
   /* background-color: white; */
 }
-svg text {
+
+#title-animation text {
   /* text-transform: uppercase; */
   animation: stroke 5s;
   stroke-width: 2;
@@ -41,17 +47,18 @@ svg text {
 }
 
 @media only screen and (max-width: 400px) {
-  svg text {
-    font-size: 50vw;
+  #title-animation text {
+    font-size: 8rem;
   }
 }
 
 @media only screen and (max-width: 400px) {
-  svg {
+  #title-animation {
     padding-left: 0px;
     padding-right: 0px;
   }
 }
+
 @keyframes stroke {
   0% {
     fill: rgba(72, 138, 20, 0);
@@ -65,11 +72,13 @@ svg text {
     fill: rgba(72, 138, 20, 0);
     stroke: white;
   }
+
   80% {
     fill: rgba(72, 138, 20, 0);
     stroke: white;
     stroke-width: 3;
   }
+
   100% {
     fill: white;
     stroke: white;
@@ -85,6 +94,7 @@ svg text {
   font-size: 1.2rem;
   align-self: flex-end;
 }
+
 @media only screen and (max-width: 400px) {
   .orgText {
     margin-top: 10px;
@@ -95,6 +105,7 @@ svg text {
 .orgText span {
   font-weight: 700;
 }
+
 .middleTitle {
   display: flex;
   flex-direction: column;
@@ -115,6 +126,7 @@ svg text {
   font-family: Centra;
   margin-bottom: 35px;
 }
+
 @media only screen and (max-width: 400px) {
   .slogan {
     font-size: 1.5rem;
@@ -125,12 +137,15 @@ svg text {
   0% {
     background-color: #121212;
   }
+
   70% {
     background-color: #121212;
   }
+
   80% {
     background-color: #121212;
   }
+
   100% {
     background-color: #121212;
   }
