--- a/src/components/AppFeature/AppFeature.css
+++ b/src/components/AppFeature/AppFeature.css
@@ -2,17 +2,27 @@
   background-color: #121212;
   margin-top: "40px";
 }
-.app-preview1{
-    width:inherit;
-    height: inherit;
+
+.app-preview1 {
+  width: inherit;
+  height: inherit;
+
 }
-.app-preview1 img{
-    float:right;
+
+.app-preview1 img {
+  margin-left: 100%;
 }
-.app-preview2{
-    width: inherit;
-    height: inherit;
+
+.app-preview2 {
+  width: inherit;
+  height: inherit;
 }
+
+.play-store {
+  width: 190px;
+  height: 100px;
+}
+
 .side-text1 {
   font-family: "Helvetica Bold";
   font-style: normal;
@@ -20,11 +30,9 @@
   line-height: 100px;
   text-align: left;
 
-  background: linear-gradient(
-    107deg,
-    #aa367c 16.1%,
-    rgba(150, 127, 214, 0.7) 54.35%
-  );
+  background: linear-gradient(107deg,
+      #aa367c 16.1%,
+      rgba(150, 127, 214, 0.7) 54.35%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -39,13 +47,29 @@
   line-height: 100px;
   text-align: right;
 
-  background: linear-gradient(
-    107deg,
-    #aa367c 16.1%,
-    rgba(150, 127, 214, 0.7) 54.35%
-  );
+  background: linear-gradient(107deg,
+      #aa367c 16.1%,
+      rgba(150, 127, 214, 0.7) 54.35%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   /* text-fill-color: transparent; */
+}
+
+@media only screen and (max-width: 600px) {
+
+  .side-text1,
+  .side-text2 {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .play-store {
+    width: inherit;
+    height: inherit;
+  }
+
+  .app-preview1 img {
+    margin-left: 0;
+  }
 }
