--- a/src/components/SocialMedia/SocialMedia.css
+++ b/src/components/SocialMedia/SocialMedia.css
@@ -1,16 +1,17 @@
 .socialmedia .socialmedia-links li::marker {
-  display: none;
+  display: inline;
 }
 
-ol, ul {
+ol,
+ul {
   padding-left: 0;
 }
 
-.socialmedia  a svg {
+.socialmedia a svg {
   transition: 0.2s ease-in-out;
 }
 
 
-.socialmedia  a:hover svg {
+.socialmedia a:hover svg {
   fill: #861697;
 }
