--- a/src/components/AppFeature/AppFeature.css
+++ b/src/components/AppFeature/AppFeature.css
@@ -6,7 +6,6 @@
 .app-preview1 {
   width: inherit;
   height: inherit;
-
 }
 
 .app-preview1 img {
@@ -30,9 +29,11 @@
   line-height: 100px;
   text-align: left;
 
-  background: linear-gradient(107deg,
-      #aa367c 16.1%,
-      rgba(150, 127, 214, 0.7) 54.35%);
+  background: linear-gradient(
+    107deg,
+    #aa367c 16.1%,
+    rgba(150, 127, 214, 0.7) 54.35%
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -47,9 +48,11 @@
   line-height: 100px;
   text-align: right;
 
-  background: linear-gradient(107deg,
-      #aa367c 16.1%,
-      rgba(150, 127, 214, 0.7) 54.35%);
+  background: linear-gradient(
+    107deg,
+    #aa367c 16.1%,
+    rgba(150, 127, 214, 0.7) 54.35%
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -57,7 +60,6 @@
 }
 
 @media only screen and (max-width: 600px) {
-
   .side-text1,
   .side-text2 {
     font-size: 40px;
