--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,6 +1,6 @@
-.banner {
+/* .banner {
   background-image: linear-gradient(180deg, #aa367c 0%, #121212 100%);
-}
+} */
 
 .bannerWrap {
   display: flex;
