--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -157,3 +157,29 @@
   justify-content: center;
   width: 100%;
 }
+
+.socialMedia {
+  display: none;
+  top: 25rem;
+  font-size: 2.5rem;
+  left: 48px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  text-align: center;
+}
+
+.socialMain{
+  display: none;
+}
+
+
+@media only screen and (min-width: 768px) {
+  .socialMedia {
+    display: block;
+  }
+  .socialMain{
+    display: block;
+  }
+}
