added certificates section

--- a/src/components/AppFeature/AppFeature.css
+++ b/src/components/AppFeature/AppFeature.css
@@ -29,11 +29,7 @@
   line-height: 100px;
   text-align: left;
 
-  background: linear-gradient(
-    107deg,
-    #aa367c 16.1%,
-    rgba(150, 127, 214, 0.7) 54.35%
-  );
+  background: linear-gradient(107deg, #aa367c 16.1%, #967fd6b3 54.35%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
