--- a/src/components/Themes.css
+++ b/src/components/Themes.css
@@ -1,20 +1,24 @@
 #themes-section {
-    padding: 10px;
-    margin-bottom: 20px;
+  padding: 10px;
+  margin-bottom: 20px;
 }
 
 #themes-section h1 {
-    font-family: 'Helvetica Bold';
+  font-family: "Helvetica Bold";
+  text-align: center;
+  margin: 5px 0 20px 0;
 }
 
 .themes-tiles img {
-    height: 200px;
-    width: 200px;
-
+  height: 200px;
+  width: 200px;
 }
 
 .themes-tiles figcaption {
-    font-family: 'Helvetica';
-    text-align: center;
-    font-size: 23px;
+  font-family: "Helvetica";
+  text-align: center;
+  font-size: 23px;
+}
+
+@media only screen and (max-width: 600px) {
 }
