--- a/src/components/progressBar/ProgressBar.css
+++ b/src/components/progressBar/ProgressBar.css
@@ -1,31 +1,29 @@
 html {
-    overflow: -moz-scrollbars-none;
-    scrollbar-width: none;
+  overflow: -moz-scrollbars-none;
+  scrollbar-width: none;
 }
 
 #progressBarContainer {
-    position: fixed;
-    z-index: 10;
-    background: transparent;
-    width: 100%;
-    top: 89px;
-    left: 0;
-    border-radius: 40px;
-
+  position: fixed;
+  z-index: 10;
+  background: transparent;
+  width: 100%;
+  top: 89px;
+  left: 0;
+  border-radius: 40px;
 }
-  
-  
-#progressBar {
-    background: linear-gradient(to left, rgb(208, 0, 255), hsl(300, 100%, 50%));
-    transform-origin: top left;
-    transform: scale(0,0);
-    border-radius: 40px;
 
-    /* opacity: 0; */
+#progressBar {
+  background: linear-gradient(to left, #aa367c, #967fd6b3);
+  transform-origin: top left;
+  transform: scale(0, 0);
+  border-radius: 40px;
+
+  /* opacity: 0; */
 }
 
 #progressBarContainer,
 #progressBar {
-    height: 7px;
-    border-radius: 40px;
+  height: 7px;
+  border-radius: 40px;
 }
