--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,5 +1,5 @@
 .banner {
-  background: transparent;
+  background-image: linear-gradient(to bottom, #aa367c, #aa458f, #a953a1, #a560b3, #a06ec3, #8f6bb8, #7f67ac, #7062a0, #564d79, #3d3955, #272532, #121212);
 }
 
 .bannerWrap {
@@ -131,6 +131,7 @@
   .slogan {
     font-size: 1.5rem;
   }
+
   video {
     height: 600px;
     max-width: inherit;
@@ -189,6 +190,7 @@
   .socialMedia {
     display: block;
   }
+
   .socialMain {
     display: block;
   }
