--- a/src/components/TitleSponsorsCard.css
+++ b/src/components/TitleSponsorsCard.css
@@ -1,38 +1,42 @@
-.eventcard{
-    cursor: pointer;
-    /* border-radius: 15px; */
-    overflow: hidden;
-    transition: .3s ease-in-out;
-    box-shadow: 2px 3px 10px rgba(0,0,0,4);
+.eventcard {
+background: transparent;
+  cursor: pointer;
+  /* border-radius: 15px; */
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
+  /* box-shadow: 2px 3px 10px rgba(0,0,0,4); */
+  box-shadow: rgb(48, 3, 54) 0px 4px 10px;
+  /* box-shadow: rgb(202, 28, 225) 0px 4px 10px; */
 }
-.eventcard:hover{
-    transition: .3s ease-in-out;
-    box-shadow: 2px 3px 20px rgba(0,0,0,0.7);
+.eventcard:hover {
+  transition: 0.3s ease-in-out;
+  box-shadow: rgb(202, 28, 225) 0px 4px 10px;
+
 }
-.eventcard img{
-    width:100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
+.eventcard img {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  background-size: cover;
 }
-@media screen and (min-width:64rem){
-    .eventcard{
-        width: 685px;
-        height: 240px;
-        /* margin: 20px; */
-    }
+@media screen and (min-width: 64rem) {
+  .eventcard {
+    width: 685px;
+    height: 240px;
+    /* margin: 20px; */
+  }
 }
-@media screen and (max-width:64rem) {
-    .eventcard{
-        width: 40vw;
-        height: 24vw;
-        /* margin: 20px; */
-    }
+@media screen and (max-width: 64rem) {
+  .eventcard {
+    width: 40vw;
+    height: 24vw;
+    /* margin: 20px; */
+  }
 }
-@media screen and (max-width:700px){
-    .eventcard{
-        height: 45vw;
-        width: 80vw;
-        /* margin: 10px; */
-    }
+@media screen and (max-width: 700px) {
+  .eventcard {
+    height: 45vw;
+    width: 80vw;
+    /* margin: 10px; */
+  }
 }
