--- a/src/components/Sponsor.css
+++ b/src/components/Sponsor.css
@@ -1,5 +1,6 @@
 .CotentRow {
-  margin-top: 0px;
+  /* margin-top: 0px; */
+  margin-top: 5px;
 }
 
 .triangle-left {
@@ -13,7 +14,8 @@
 .spon_head {
   font-family: "Helvetica Bold";
   font-style: normal;
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 27px;
   background: linear-gradient(
     107deg,
     #aa367c 16.1%,
@@ -27,7 +29,8 @@
 .spon_p {
   font-family: "Helvetica Bold";
   font-style: normal;
-  font-size: 10px;
+  /* font-size: 10px; */
+  font-size: 15px;
   background: linear-gradient(
     107deg,
     #aa367c 16.1%,
@@ -40,7 +43,8 @@
 
 .spon_us {
   width: 23rem;
-  height: 12rem;
+  /* height: 12rem; */
+  height: 16rem;
   box-shadow: rgb(202, 28, 225) 0px 4px 10px;
   border-radius: 20px;
   margin: auto;
