--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,18 @@
 @font-face {
-  font-family: Centra;
-  src: url("./assets/font/CentraNo2-Bold.ttf");
+  font-family: Fira Code Bold;
+  src: url("./assets/font/FiraCode-Bold.ttf");
   font-weight: 700;
 }
 
 @font-face {
-  font-family: Centra;
-  src: url("./assets/font/CentraNo2-Medium.ttf");
+  font-family: Fira Code Medium;
+  src: url("./assets/font/FiraCode-Medium.ttf");
   font-weight: 500;
 }
 
 @font-face {
-  font-family: Centra;
-  src: url("./assets/font/CentraNo2-Book.ttf");
+  font-family: Fira Code;
+  src: url("./assets/font/FiraCode-Regular.ttf");
   font-weight: 400;
 }
 
@@ -53,7 +53,8 @@ body {
   position: relative;
   background-color: #121212 !important;
   color: #fff !important;
-  font-family: "Helvetica", sans-serif !important;
+  /* font-family: "Helvetica", sans-serif !important; */
+  font-family: "Fira Code";
 }
 
 html,
@@ -234,7 +235,6 @@ span.navbar-text {
   transition: 0.3s ease-in-out;
 }
 
-
 .navbar-text button span {
   z-index: 1;
 }
@@ -245,7 +245,7 @@ span.navbar-text {
 }
 
 .navbar-text button span a:hover {
-  color: #660A99;
+  color: #660a99;
   text-decoration: none;
 }
 
@@ -260,17 +260,17 @@ span.navbar-text {
   top: 0;
   z-index: -1;
   transition: 0.3s ease-in-out;
-  color: #660A99;
+  color: #660a99;
 }
 
 .navbar-text button:hover {
-  color: #660A99;
+  color: #660a99;
 }
 
 .navbar-text button:hover::before {
-  border: 3px solid #660A99;
+  border: 3px solid #660a99;
   border-radius: 50px;
-  color: #660A99;
+  color: #660a99;
   content: "";
   width: 100%;
   height: 100%;
