--- a/src/components/AppFeature/AppFeature.css
+++ b/src/components/AppFeature/AppFeature.css
@@ -44,9 +44,7 @@
   line-height: 100px;
   text-align: right;
 
-  background: linear-gradient(107deg,
-      #aa367c 16.1%,
-      rgba(150, 127, 214, 0.702) 54.35%);
+  background: linear-gradient(107deg, #aa367c 16.1%, #967fd6b3 54.35%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -54,7 +52,6 @@
 }
 
 @media only screen and (max-width: 600px) {
-
   .side-text1,
   .side-text2 {
     font-size: 40px;
